docs/0.17/_sources/api/gammapy.modeling.models.PointSpatialModel.rst.txt
PointSpatialModel
=================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: PointSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PointSpatialModel.covariance
      ~PointSpatialModel.default_parameters
      ~PointSpatialModel.evaluation_radius
      ~PointSpatialModel.lat_0
      ~PointSpatialModel.lon_0
      ~PointSpatialModel.parameters
      ~PointSpatialModel.phi_0
      ~PointSpatialModel.position
      ~PointSpatialModel.position_error
      ~PointSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~PointSpatialModel.__call__
      ~PointSpatialModel.copy
      ~PointSpatialModel.create
      ~PointSpatialModel.evaluate_geom
      ~PointSpatialModel.from_dict
      ~PointSpatialModel.from_parameters
      ~PointSpatialModel.integrate
      ~PointSpatialModel.integrate_geom
      ~PointSpatialModel.plot
      ~PointSpatialModel.plot_error
      ~PointSpatialModel.to_dict
      ~PointSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: to_dict
   .. automethod:: to_region
